; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_dataset.c_dsl_get_redact_snaps.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_dataset.c_dsl_get_redact_snaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPA_FEATURE_REDACTED_DATASETS = common dso_local global i32 0, align 4
@ZPROP_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dsl_get_redact_snaps(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @SPA_FEATURE_REDACTED_DATASETS, align 4
  %9 = call i64 @dsl_dataset_get_uint64_array_feature(i32* %7, i32 %8, i32* %5, i32** %6)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @ZPROP_VALUE, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @fnvlist_add_uint64_array(i32* %12, i32 %13, i32* %14, i32 %15)
  br label %17

17:                                               ; preds = %11, %2
  ret void
}

declare dso_local i64 @dsl_dataset_get_uint64_array_feature(i32*, i32, i32*, i32**) #1

declare dso_local i32 @fnvlist_add_uint64_array(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
